GNOME Bugzilla – Bug 751118
playbin: current-suburi does not return correct status when an invalid SUBURI is passed
Last modified: 2015-06-22 12:51:54 UTC
While developing unit test for gst-player, I encountered the following issue. unit test executes the below sequence - set uri - set invalid suburi - starts the pipeline - after 4s, queries the suburi using g_object_get (playbin, "current-suburi", &val) the current suburi return the previously set invalid suburi. I do notice that warning_cb does report message from GstFileSrc that we are failed to find the resource but it would be nice if current-suburi property also provide updated status of current suburi being played.
Created attachment 305489 [details] [review] free group->suburi on failure
commit ab79e5051041863c33230d238371923f68d1ea70 Author: Sebastian Dröge <sebastian@centricular.com> Date: Mon Jun 22 14:51:07 2015 +0200 playbin: Reset suburi also when receiving an error message from the sub uridecodebin http://bugzilla.gnome.org/show_bug.cgi?id=751118 commit bcc9021071e8a1b683616710affca7887ab7f9d4 Author: Brijesh Singh <brijesh.ksingh@gmail.com> Date: Wed Jun 17 10:20:54 2015 -0500 playbin: free group->suburi on failure If suburidecodebin is failed to negotiate (e.g file does not exist) then free internal suburi variable so that 'current-suburi' property returns correct status. https://bugzilla.gnome.org/show_bug.cgi?id=751118